[tool.poetry]
name = "crate-admin-tools"
version = "0.1.0"
description = "CLI tools that simplify the administrative effort with the data model in CrateDB"
authors = ["Michael Beer <mb@outlook.at>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
crate = "^0.26.0"
argh = "^0.26.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[tool.poetry.scripts]
cr8-admin = "crate_admin_tools.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
